<resources>
    <string name="cancel">Cancel</string>
    <string name="msg_error">An error occurred while performing the operation</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="pattern_month_day_short">MMM dd</string>
    <string name="pattern_month_day_long">MMMM dd</string>
    <string name="delete">Delete</string>
    <string name="save">SAVE</string>
    <string name="previous_days">Previous days</string>
    <string name="next_days">Next days</string>
    <string name="default_string">---</string>
    <string name="error_list">An error occurred while loading the list</string>
    <string name="not_repeat">Not repeat</string>
    <string name="every_second">Every second</string>
    <string name="every_minute">Every minute</string>
    <string name="every_hour">Every hour</string>
    <string name="every_day">Every day</string>
    <string name="every_week">Every week</string>
    <string name="every_month">Every month</string>
    <string name="every_year">Every year</string>
    <string name="custom">Custom</string>
    <string name="no_records_found">No records found</string>
    <string name="yesterday">Yesterday</string>
    <string name="mash_timer">Mash Timer</string>
    <string name="notes">Notes</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="steps">Steps</string>
    <string name="info">Info</string>
    <string name="developed_by">Developed by</string>
    <string name="version">Version</string>
    <string name="itens">itens</string>
    <string name="item">item</string>
    <string name="no_items_selected">0 itens</string>
    <string name="search">Search</string>
    <string name="initial_date">Initial Date</string>
    <string name="final_date">Final Date</string>
    <string name="filter_by_date">Filter by date</string>
      <string name="settings">Settings</string>
    <string name="tip">Tip</string>
    <string name="got_it">GOT IT</string>
    <string name="ept_click_to_add">Click the + button to add</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="no_filter">No filter</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="date_range">Date range</string>
    <string name="and">and</string>
    <string name="none">None</string>
    <string name="label_description">DESCRIPTION</string>
    <string name="description">Description</string>
    <string name="menu_save">SAVE</string>
    <string name="type">Type</string>
    <string name="year">year</string>
    <string name="years">years</string>
    <string name="month">month</string>
    <string name="months">months</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>
    <string name="day">day</string>
    <string name="days">Dias</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="second">second</string>
    <string name="seconds">seconds</string>
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_repeat">Repeat</string>
    <string name="label_starting_date">Starting Date</string>
    <string name="label_countdown">Countdown</string>
    <string name="msg_data_cant_be_greater">The date can not be greater than today</string>
    <string name="msg_end_date">The end date can not be less than the starting date</string>
    <string name="label_status">Status</string>
    <string name="label_date_time">Date/Time</string>
    <string name="restore">Restore</string>
    <string name="density">Density</string>
    <string name="temperature">Temperature</string>
    <string name="calibration">Calibration</string>
    <string name="corrected_density">Corrected Density</string>
    <string name="hydrometer">Hydrometer</string>
    <string name="amount">Amount</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">DoctorBrewer</string>
    <string name="recipes">Recipes</string>
    <string name="brewing">Brewing</string>
    <string name="brewing_details">Brewing Details</string>
    <string name="ingredients">Ingredients</string>
    <string name="title_activity_navigation_drawer">Activity Navigation Drawer </string>
    <string name="view_holder_not_found">ViewHolder not found.</string>
    <string name="hop">Hop</string>
    <string name="malt">Malt</string>
    <string name="water">Walter</string>
    <string name="others">Others</string>
    <string name="yeast">Yeast</string>
    <string name="filter">Filter</string>
    <string name="max_temperature">Max Temperature</string>
    <string name="min_temperature">Min Temperature</string>
    <string name="floculation">Floculation</string>
    <string name="min_attenuation">Min Attenuation</string>
    <string name="max_attenuation">Max Attenuation</string>
    <string name="form">Form</string>
    <string name="beta">Beta</string>
    <string name="alfa">Alfa</string>
    <string name="ph">PH</string>
    <string name="calcium">Calcium</string>
    <string name="magnesium">Magnesium</string>
    <string name="origin">Origin</string>
    <string name="sodium">Sodium</string>
    <string name="sulfate">Sulfate</string>
    <string name="chloride">Chloride</string>
    <string name="bicarbonate">Bicarbonate</string>
    <string name="moisture">Moisture</string>
    <string name="yield">Yield</string>
    <string name="max_in_batch">Max In Batch</string>
    <string name="recommend_mash">Recomend Mash</string>
    <string name="you_want_to_register">you want to register</string>
    <string name="name">Name</string>
    <string name="lager">Lager</string>
    <string name="ale">Ale</string>
    <string name="lambic">Lambic</string>
    <string name="other_familyes">Other Familyes</string>
    <string name="dry">Dry</string>
    <string name="pellet">Pellet</string>
    <string name="liquid">Liquid</string>
    <string name="insert_new_yeast">Insert New Yeast</string>
    <string name="alter_yeast">Alter Yeast</string>
    <string name="alter_hop">Alter Hop</string>
    <string name="alter_water">Alter Water</string>
    <string name="select_the_type_of_yeast">Select The Type Of Yeast</string>
    <string name="select_the_type_of_malt">Select The Type Of Malt</string>
    <string name="select_the_method_of_brassagem">Select The Method Of Brassagem</string>
    <string name="select_mash">Select Mash</string>
    <string name="select_the_malts">Select the malts</string>
    <string name="wheat">Wheat</string>
    <string name="wine">Wine</string>
    <string name="champagne">Champanhe</string>
    <string name="required">Required</string>
    <string name="alter">Alter</string>
    <string name="updated">Updated</string>
    <string name="deleted">Deleted</string>
    <string name="recorded_updated_successfully">Recorded/Updated successfully</string>
    <string name="leaf">Leaf</string>
    <string name="bittering">Bittering</string>
    <string name="aroma">Aroma</string>
    <string name="both">Both</string>
    <string name="plug">Plug</string>
    <string name="insert_new_hop">Insert New Hop</string>
    <string name="insert_new_malt">Insert New Malt</string>
    <string name="insert_new_Water">Insert New Water</string>
    <string name="grain">Grain</string>
    <string name="sugar">Sugar</string>
    <string name="extract">Extract</string>
    <string name="dry_extract">Dry Extract</string>
    <string name="adjunct">Adjunct</string>
    <string name="alter_malt">Alter Malt</string>
    <string name="alter_mash">Alter Mash</string>
    <string name="srm">SRM</string>
    <string name="hop_details">Hop Details</string>
    <string name="malt_details">Malt Details</string>
    <string name="water_details">Water Details</string>
    <string name="yeast_details">Yeast Details</string>
    <string name="general">General</string>
    <string name="procedure">Procedure</string>
    <string name="start">Start</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="ibu">IBU</string>
    <string name="abv">ABV</string>
    <string name="og">OG</string>
    <string name="fg">FG</string>
    <string name="style">Style</string>
    <string name="batch_size">Batch Size</string>
    <string name="pre_boil_gravity">Pré Boil Gravity</string>
    <string name="original_gravity">Original Gravity</string>
    <string name="final_gravity">Final Gravity</string>
    <string name="biab_traditional">Biab Traditional</string>
    <string name="insert_recipe">Insert Recipe</string>
    <string name="calculator">Calculator</string>
    <string name="utility">Utility</string>
    <string name="densimeter">Densimeter</string>
    <string name="hidrometer_adjustment">Hidrometer Adjustment</string>
    <string name="adjust_hydrometer_for_temperature">Adjust hydrometer for temperature </string>
    <string name="unitis">Unitis</string>
    <string name="format_date">Format Date</string>
    <string name="weight">Weight</string>
    <string name="volume">Volume</string>
    <string name="insert_amount">Insert Amount</string>
    <string name="insert_mash_step">Insert mash step</string>
    <string name="update_mash_step">Update mash step</string>
    <string name="profiles">Profiles</string>
    <string name="mash">Mash</string>
    <string name="boil">Boil</string>
    <string name="whirlpool">Whirlpool</string>
    <string name="first_wort">First Wort</string>
    <string name="dry_hop">Dry Hop</string>
    <string name="time">Time</string>
    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="mashs">Mashs</string>
    <string name="decoction">Decoction</string>
    <string name="infusion">Infusion</string>
    <string name="color">Color</string>
    <string name="insert_mash">Insert New Mash</string>
    <string name="mash_details">Mash Details</string>
    <string name="alter_recipe">Alter Recipe</string>
    <string name="select_the_hops">Select the hops</string>
    <string name="insert_item_hop">Insert Item Hop</string>
    <string name="insert_item_malt">Insert Item Malt</string>
    <string name="select_the_yeast">Select the yeast</string>
    <string name="insert_item_yeast">Insert Item Yeast</string>
    <string name="fermentation">Fermentation</string>
    <string name="click_to_here">Click to here</string>
    <string name="insert_fermentation_measurement">Insert fermentation measurement</string>
    <string name="completed_step">Completed Step</string>
    <string name="the_boil_is_over">The boil is over</string>
    <string name="the_recipe_must_have_at_least_one_malt">The recipe must have at least one malt</string>
    <string name="the_recipe_must_have_at_least_one_hop">The recipe must have at least one hop</string>
    <string name="the_recipe_must_have_at_least_one_yeast">The recipe must have at least one yeast</string>


</resources>
