<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dlg_input_item_ingredient__tl__time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <EditText
                android:id="@+id/et_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="15"
                android:maxLines="1"
                android:enabled="false"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                tools:hint="@string/type" />

        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/dlg_input_item_ingredient__sp__use__in"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:textDirection="firstStrongRtl" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLength="60"
                android:maxLines="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="text"
                android:maxLength="60"
                android:maxLines="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <EditText
                    android:id="@+id/et_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/temperature"
                    android:inputType="numberDecimal"
                    android:maxLength="3"
                    android:maxLines="2" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <EditText
                    android:id="@+id/et_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/time"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="2" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>







